--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ./environment/.terraform/*
 environment/.terraform/*
 /environment/.terraform/*
+environment/eks-blueprint/environment/.terraform/*
+environment/eks-blueprint/environment/.terraform.lock.hcl
+environment/eks-blueprint/eks-blue/.terraform/*
 
 # .tfstate files
 *.tfstate
