--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ environment/.terraform/*
 environment/eks-blueprint/environment/.terraform/*
 environment/eks-blueprint/environment/.terraform.lock.hcl
 environment/eks-blueprint/eks-blue/.terraform/*
+environment/eks-blueprint/eks-blue/.terraform.lock.hcl
 
 # .tfstate files
 *.tfstate
