--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ environment/.terraform/*
 environment/eks-blueprint/environment/.terraform.lock.hcl
 environment/eks-blueprint/eks-blue/.terraform/*
 environment/eks-blueprint/eks-blue/.terraform.lock.hcl
+environment/s3-sns
+environment/s3-sqs
 # .tfstate files
 *.tfstate
 *.tfstate.*
