--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ environment/.terraform/*
 environment/eks-blueprint/environment/.terraform.lock.hcl
 environment/s3-sns
 environment/s3-sqs
+environment/eks-blueprint/environment/.terraform/*
 
 # .tfstate files
 *.tfstate
